# easygamma

./: .SRCINFO  .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  easygamma  easygamma.desktop  gamma_wayland.c  gamma_wayland.h  main.cpp  wlr-gamma-control-unstable-v1.xml
.github/workflows/: release.yml
